--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "lucide-react": "^0.477.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
