--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "html5-qrcode": "^2.2.7",
     "lucide-react": "^0.477.0",
+    "motion": "^12.6.3",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
