--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@mui/styled-engine-sc": "^7.0.0",
+    "@mui/x-charts": "^7.28.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.13",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -29,6 +31,7 @@
     "motion": "^12.6.3",
     "path": "^0.12.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.3",
@@ -42,6 +45,7 @@
     "@eslint/js": "^9.21.0",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
+    "@types/react-chartjs-2": "^2.0.2",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
