--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "firebase": "^11.6.0",
+    "framer-motion": "^12.6.3",
     "html5-qrcode": "^2.2.7",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.3",
     "path": "^0.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.3",
     "react-router-dom": "^7.3.0",
