--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "html5-qrcode": "^2.2.7",
+    "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.477.0",
     "motion": "^12.6.3",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
     "@types/react-chartjs-2": "^2.0.2",
