--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^5.5.0",
     "react-number-format": "^5.4.3",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
