--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/date-fns": "^2.5.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.9",
     "@types/react": "^19.0.10",
