--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.0.1",
     "@mui/styled-engine-sc": "^7.0.0",
     "@mui/x-charts": "^7.28.0",
+    "@mui/x-date-pickers": "^8.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.13",
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "firebase": "^11.6.0",
@@ -39,6 +41,7 @@
     "lucide-react": "^0.477.0",
     "motion": "^12.6.3",
     "path": "^0.12.7",
+    "pnpm": "^10.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
@@ -47,6 +50,8 @@
     "react-number-format": "^5.4.3",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
+    "rsuite": "^5.80.0",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
